<resources>
    <string name="app_name">Nyota</string>
    <!-- Navigation -->
    <string name="nav_header_title">Nyota</string>
    <string name="nav_header_subtitle">Planets, constellations and satellites</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- Labels -->
    <string name="label_satellite">Satellite</string>
    <string name="label_satellites">Satellites</string>
    <string name="label_constellations">Constellations</string>
    <string name="label_star">Star</string>
    <string name="label_stars">Stars</string>
    <string name="label_planets">Planets</string>
    <string name="label_empty" />
    <string name="label_nyota">Nyota</string>
    <string name="label_moon">Moon</string>
    <string name="label_ok">OK</string>
    <string name="label_done">Done</string>
    <string name="default_orientation">115°</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_city_colon">City:</string>
    <string name="label_date_colon">Date:</string>
    <string name="label_time_colon">Time:</string>
    <string name="label_distance">Distance</string>
    <string name="label_tle">TLE</string>
    <string name="label_outdated">Outdated</string>
    <string name="label_default_cities">Create default cities</string>
    <string name="label_show_details">…</string>
    <string name="label_hide_details">(hide)</string>
    <string name="label_delete">Delete</string>
    <string name="label_options">Options:</string>
    <string name="label_show_targets">Targets</string>
    <string name="label_show_invisible_elements">Invisible Elements</string>
    <string name="label_show_stars">Stars</string>
    <string name="label_show_planets">Planets</string>
    <string name="label_show_satellites">Satellites</string>
    <string name="label_current_location_and_time">Current Device Location and Time:</string>
    <string name="label_reference_time">Reference Time:</string>
    <string name="label_reference_location">Reference Location:</string>
    <string name="label_update_time_automatically">Update Time Automatically</string>
    <string name="label_update_orientation_automatically">Update Orientation Automatically</string>
    <string name="label_elements_colon">Elements:</string>
    <string name="label_luminosity_colon">Star Visibility:</string>
    <string name="label_name_colon">Name:</string>
    <string name="label_display_colon">Display:</string>
    <string name="label_latitude_colon">Latitude (in °):</string>
    <string name="label_longitude_colon">Longitude (in °):</string>
    <string name="label_altitude_colon">Altitude (in km):</string>
    <string name="label_distance_colon">Distance (in km):</string>
    <string name="label_display_symbols">Symbols</string>
    <string name="label_display_magnitude">Magnitude</string>
    <string name="label_display_constellations">Constellations</string>
    <string name="label_display_constellation_names">Constellation Names</string>
    <string name="label_display_planet_names">Planet Names</string>
    <string name="label_display_star_names">Star Names</string>
    <string name="label_display_ecliptic">Ecliptic</string>
    <string name="label_display_hints">Hints</string>
    <string name="label_display_targets">Targets</string>
    <string name="label_display_satellites">Satellites</string>
    <string name="label_magnitude_filter">Magnitude Filter</string>
    <string name="label_update_location_automatically">Update Location Automatically</string>
    <string name="label_automatic_city_location">Use Current Device Location</string>
    <string name="label_default_pitch">+23°</string>
    <string name="label_default_roll">-3°</string>
    <string name="label_default_direction">124° SW 48° N</string>
    <string name="label_default_zoom">45°</string>
    <string name="label_freeze">Freeze</string>
    <string name="label_unfreeze">Unfreeze</string>
    <string name="label_undo">Undo</string>
    <string name="label_reset">Reset</string>
    <string name="label_reset_to_default">Reset to Default</string>
    <string name="label_gmt">GMT</string>
    <string name="label_fixed">Fixed</string>
    <string name="label_use_device_location">Use Device Location</string>
    <string name="label_timezone_colon">Timezone:</string>
    <string name="label_orientation_colon">Orientation:</string>
    <string name="label_pitch_colon">Pitch:</string>
    <string name="label_center_colon">Center:</string>
    <string name="label_azimuth_colon">Azimuth:</string>
    <string name="label_roll_colon">Roll:</string>
    <string name="label_current_location_colon">Current Location:</string>
    <string name="label_current_time_colon">Current Time:</string>
    <string name="label_radius">Vega Radius</string>
    <string name="label_gamma">Gamma</string>
    <string name="label_lambda">Lambda</string>
    <string name="label_statistics_colon">Statistics</string>
    <string name="label_zoom_angle">%.0f°</string>
    <string name="label_filter_ptolemaeus">Ptolemaeus"</string>
    <string name="label_filter_zodiac">Zodiac (12)</string>
    <string name="label_filter_iau">IAU (88)</string>

    <!-- Actions -->
    <string name="action_time">Date and Time</string>
    <string name="action_location">Location</string>
    <string name="action_settings">Settings</string>
    <string name="action_cities">Cities</string>
    <string name="action_display">Display</string>
    <string name="action_view_luminosity">Luminosity</string>
    <string name="action_new">New</string>
    <string name="action_default_cities">Add Default Cities</string>
    <string name="action_view_options">Display</string>
    <string name="action_view_projections">Projections</string>
    <string name="action_view_live_mode">Live Mode</string>
    <string name="action_open">Open</string>
    <string name="action_sky">Sky</string>
    <string name="action_finder">Finder</string>
    <string name="action_info">Info</string>
    <string name="action_filter">Filter</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_stars">Stars</string>
    <string name="menu_satellite">Satellite</string>
    <string name="menu_satellites">Satellites</string>
    <string name="menu_planets">Planets</string>
    <string name="menu_constellation">Constellation</string>
    <string name="menu_constellations">Constellations</string>
    <string name="menu_moon">Moon</string>
    <string name="menu_sun">Sun</string>
    <string name="menu_planet">Planet</string>
    <string name="menu_sky">Sky</string>
    <string name="menu_finder">Finder</string>
    <string name="menu_interval_picker">Intervals</string>
    <string name="menu_city_picker">Cities</string>
    <string name="menu_city">City</string>
    <string name="menu_moment">Moment</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">Info</string>

    <!-- Defaults -->
    <string name="default_satellite_name">ISS</string>
    <string name="default_satellite_number">83928</string>
    <string name="default_satellite_display_name">International Space Station</string>
    <string name="default_satellite_position">Position</string>
    <string name="default_sun">Sun</string>
    <string name="default_planet_name">Jupiter</string>
    <string name="default_constellation_name">Virgo</string>
    <string name="default_elements">20</string>
    <string name="default_planet_position">37° E 37°</string>
    <string name="default_time">23:32</string>
    <string name="default_time_seconds">23:32:57</string>
    <string name="default_time_seconds_timezone">23:32:57 +0100</string>
    <string name="default_date_time">8 Dec 20:00</string>
    <string name="default_date">8 Dec 2020</string>
    <string name="default_timezone">+0100</string>
    <string name="default_interval">HOUR</string>
    <string name="default_text">Default Text</string>
    <string name="default_tle_date_time">2020–10–30 13:27</string>
    <string name="default_tle_summary">Height 8888 – 9999 km<br />Revolutions per Day 13.2</string>
    <string name="default_tle_status">o.k.</string>
    <string name="default_distance">11.234 km</string>
    <string name="default_error_message">Sample error message visible of if present</string>
    <string name="default_processing_status">…</string>
    <string name="default_zoom">5.0</string>
    <string name="default_copyright">Copyright ©</string>
    <string name="label_default_center">134° SE +17°</string>
    <string name="default_longitude">13.1234</string>
    <string name="default_city">Berlin</string>
    <string name="default_date_time_timezone">29 Dec 2020 21:23:00 +0200</string>
    <string name="default_latitude">52.3234</string>
    <string name="default_altitude">0.483</string>
    <string name="default_geo_location">13.4°E 52.64° N</string>
    <string name="default_magnitude">2.0</string>
    <string name="default_hint">[.?.]</string>
    <string name="default_double">6.0</string>

    <!-- Title -->
    <string name="title_city">Reference Location</string>
    <string name="title_choose_interval">Interval</string>
    <string name="title_choose_city">Reference location</string>
    <string name="title_choose_time">Reference date and time</string>
    <string name="title_permission_request">Permission Request</string>
    <!-- Hints -->
    <string name="hint_choose_interval">Select an interval</string>
    <string name="hint_choose_city">Select the reference location</string>
    <string name="hint_choose_time">Select the reference date and time</string>
    <string name="hint_city">Specify the details of the reference location</string>

    <!-- Preferences - Remove when Preferences are refactored....-->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Messages -->
    <string name="message_permission_is_required">The permission to access your %s is required to use this function.</string>
    <string name="message_permission_was_granted">The permission: %s was granted.</string>
    <string name="message_permission_was_refused">The permission: %s was rejected.</string>
    <string name="message_city_was_deleted">City was deleted</string>
    <string name="label_open">Open</string>
    <string name="label_sky">Sky</string>
    <string name="label_finder">Finder</string>
    <string name="label_display_grid">Grid</string>
    <string name="label_projection">Projection</string>
    <string name="label_projection_mercator">Mercator</string>
    <string name="label_projection_archimedes">Archimedes</string>
    <string name="label_projection_stereographic">Stereographic</string>
    <string name="label_projection_sphere">Sphere</string>
    <string name="label_projection_central">Central</string>
    <string name="label_live_mode">Live Mode</string>
    <string name="label_live_mode_off">Off</string>
    <string name="label_live_mode_hints">Hints</string>
    <string name="label_live_mode_move_center">Move Center</string>
</resources>
