<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/button_margin"
    android:foreground="@drawable/card_view_border"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardBackgroundColor="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/card_view_margin"
        >

        <TextView
            android:id="@+id/titleOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_options"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="@dimen/element_margin"
            app:layout_constraintTop_toTopOf="parent"
            />

        <CheckBox
            android:id="@+id/checkBoxShowStars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_show_stars"
            app:layout_constraintTop_toBottomOf="@id/titleOptions"
            />

        <CheckBox
            android:id="@+id/checkBoxShowPlanets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_show_planets"
            app:layout_constraintTop_toBottomOf="@id/checkBoxShowStars"
            />

        <CheckBox
            android:id="@+id/checkBoxShowSatellites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_show_satellites"
            app:layout_constraintTop_toBottomOf="@id/checkBoxShowPlanets"
            />

        <CheckBox
            android:id="@+id/checkBoxShowTargets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_show_targets"
            app:layout_constraintTop_toBottomOf="@id/checkBoxShowSatellites"
            />

        <CheckBox
            android:id="@+id/checkBoxShowInvisibleElements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_show_invisible_elements"
            app:layout_constraintTop_toBottomOf="@id/checkBoxShowTargets"
            />

        <ImageView
            android:id="@+id/buttonOK"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:src="@drawable/ok"
            android:contentDescription="@string/label_empty"
            app:layout_constraintTop_toBottomOf="@id/checkBoxShowInvisibleElements"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/element_margin"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

