<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.stho.nyota.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_satellite"
            app:destination="@id/nav_satellite" />
        <action
            android:id="@+id/action_nav_home_to_nav_sky"
            app:destination="@id/nav_sky" />
        <action
            android:id="@+id/action_nav_home_to_nav_constellation"
            app:destination="@id/nav_constellation" />
        <action
            android:id="@+id/action_nav_home_to_nav_planet"
            app:destination="@id/nav_planet" />
        <action
            android:id="@+id/action_nav_home_to_nav_star"
            app:destination="@id/nav_star" />
    </fragment>

    <fragment
        android:id="@+id/nav_stars"
        android:name="com.stho.nyota.ui.stars.StarListFragment"
        android:label="@string/menu_stars"
        tools:layout="@layout/fragment_star_list" >
        <action
            android:id="@+id/action_nav_stars_to_nav_star"
            app:destination="@id/nav_star" />
    </fragment>

    <fragment
        android:id="@+id/nav_satellites"
        android:name="com.stho.nyota.ui.satellites.SatelliteListFragment"
        android:label="@string/menu_satellites"
        tools:layout="@layout/fragment_satellite_list" >
        <action
            android:id="@+id/action_nav_satellites_to_nav_satellite"
            app:destination="@id/nav_satellite" />
    </fragment>

    <fragment
        android:id="@+id/nav_planets"
        android:name="com.stho.nyota.ui.planets.PlanetListFragment"
        android:label="@string/menu_planets"
        tools:layout="@layout/fragment_planet_list" >
        <action
            android:id="@+id/action_nav_planets_to_nav_planet"
            app:destination="@id/nav_planet" />
    </fragment>

    <fragment
        android:id="@+id/nav_constellations"
        android:name="com.stho.nyota.ui.constellations.ConstellationListFragment"
        android:label="@string/menu_constellations"
        tools:layout="@layout/fragment_constellation_list" >
        <action
            android:id="@+id/action_nav_constellations_to_nav_constellation"
            app:destination="@id/nav_constellation" />
    </fragment>

    <fragment
        android:id="@+id/nav_satellite"
        android:name="com.stho.nyota.ui.satellites.SatelliteFragment"
        android:label="@string/menu_satellite"
        tools:layout="@layout/fragment_satellite" >
        <argument
            android:name="SATELLITE"
            app:argType="string"
            android:defaultValue="ISS" />
        <action
            android:id="@+id/action_nav_satellite_to_nav_sky"
            app:destination="@id/nav_sky" />
        <action
            android:id="@+id/action_nav_satellite_to_nav_satellite_earth"
            app:destination="@id/nav_satellite_earth" />
        <action
            android:id="@+id/action_nav_satellite_to_nav_satellite_download_elements"
            app:destination="@id/nav_satellite_download_elements" />
    </fragment>

    <fragment
        android:id="@+id/nav_satellite_earth"
        android:name="com.stho.nyota.ui.satellites.SatelliteEarthFragment"
        android:label="@string/menu_satellite"
        tools:layout="@layout/fragment_satellite_earth" >
        <argument
            android:name="SATELLITE"
            app:argType="string"
            android:defaultValue="ISS" />
    </fragment>

    <fragment
        android:id="@+id/nav_satellite_download_elements"
        android:name="com.stho.nyota.ui.satellites.SatelliteDownloadElementsFragment"
        android:label="Download TLE"
        tools:layout="@layout/fragment_satellite_download_elements">
        <argument
            android:name="SATELLITE"
            app:argType="string"
            android:defaultValue="ISS" />
        <action
            android:id="@+id/action_nav_satellite_download_elements_to_nav_satellite_earth"
            app:destination="@id/nav_satellite_earth" />
    </fragment>

    <fragment
        android:id="@+id/nav_moon"
        android:name="com.stho.nyota.ui.moon.MoonFragment"
        android:label="@string/menu_moon"
        tools:layout="@layout/fragment_moon" >
        <action
            android:id="@+id/action_nav_moon_to_nav_sky"
            app:destination="@id/nav_sky" />
        <action
            android:id="@+id/action_nav_moon_to_nav_finder"
            app:destination="@id/nav_finder" />
    </fragment>

    <fragment
        android:id="@+id/nav_sun"
        android:name="com.stho.nyota.ui.sun.SunFragment"
        android:label="@string/menu_sun"
        tools:layout="@layout/fragment_sun" >
        <action
            android:id="@+id/action_nav_sun_to_nav_sky"
            app:destination="@id/nav_sky" />
        <action
            android:id="@+id/action_nav_sun_to_nav_finder"
            app:destination="@id/nav_finder" />
    </fragment>

    <fragment
        android:id="@+id/nav_planet"
        android:name="com.stho.nyota.ui.planets.PlanetFragment"
        android:label="@string/menu_planet"
        tools:layout="@layout/fragment_planet" >
        <argument
            android:name="PLANET"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_planet_to_nav_sky"
            app:destination="@id/nav_sky" />
        <action
            android:id="@+id/action_nav_planet_to_nav_finder"
            app:destination="@id/nav_finder" />
    </fragment>

    <fragment
        android:id="@+id/nav_star"
        android:name="com.stho.nyota.ui.stars.StarFragment"
        android:label="@string/label_star"
        tools:layout="@layout/fragment_star">
        <argument
            android:name="STAR"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_star_to_nav_finder"
            app:destination="@id/nav_finder" />
    </fragment>

    <fragment
        android:id="@+id/nav_sky"
        android:name="com.stho.nyota.ui.sky.SkyFragment"
        android:label="@string/menu_sky"
        tools:layout="@layout/fragment_sky" >
        <argument
            android:name="ELEMENT"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_city"
        android:name="com.stho.nyota.ui.cities.CityFragment"
        android:label="@string/menu_city"
        tools:layout="@layout/fragment_city">
        <argument
            android:name="CITY"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_interval_picker"
        android:name="com.stho.nyota.ui.interval.IntervalPickerFragment"
        android:label="@string/menu_interval_picker"
        tools:layout="@layout/fragment_interval_picker" >
    </fragment>

    <fragment
        android:id="@+id/nav_city_picker"
        android:name="com.stho.nyota.ui.cities.CityPickerFragment"
        android:label="@string/menu_city_picker"
        tools:layout="@layout/fragment_city_picker" >
        <action
            android:id="@+id/action_nav_city_picker_to_nav_city"
            app:destination="@id/nav_city" />
    </fragment>

    <fragment
        android:id="@+id/nav_moment_time"
        android:name="com.stho.nyota.ui.moment.MomentTimeFragment"
        android:label="@string/menu_moment"
        tools:layout="@layout/fragment_moment_time">
        <action
            android:id="@+id/action_nav_moment_time_to_nav_city"
            app:destination="@id/nav_city" />
    </fragment>

    <fragment
        android:id="@+id/nav_moment_location"
        android:name="com.stho.nyota.ui.moment.MomentLocationFragment"
        android:label="@string/menu_moment"
        tools:layout="@layout/fragment_moment_time">
        <action
            android:id="@+id/action_nav_moment_location_to_nav_city"
            app:destination="@id/nav_city" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.stho.nyota.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_city_picker" >
    </fragment>


    <fragment
        android:id="@+id/nav_constellation"
        android:name="com.stho.nyota.ui.constellations.ConstellationFragment"
        android:label="@string/menu_constellation"
        tools:layout="@layout/fragment_constellation" >
        <argument
            android:name="CONSTELLATION"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_constellation_to_nav_finder"
            app:destination="@id/nav_finder" />
    </fragment>

    <fragment
        android:id="@+id/nav_finder"
        android:name="com.stho.nyota.ui.finder.FinderFragment"
        android:label="@string/menu_finder"
        tools:layout="@layout/fragment_finder" >
        <argument
            android:name="ELEMENT"
            app:argType="string" />
    </fragment>

    <action android:id="@+id/action_global_nav_constellations" app:destination="@id/nav_constellations" />
    <action android:id="@+id/action_global_nav_sun" app:destination="@id/nav_sun" />
    <action android:id="@+id/action_global_nav_moon" app:destination="@id/nav_moon" />
    <action android:id="@+id/action_global_nav_satellites" app:destination="@id/nav_satellites" />
    <action android:id="@+id/action_global_nav_planets" app:destination="@id/nav_planets" />
    <action android:id="@+id/action_global_nav_interval_picker" app:destination="@id/nav_interval_picker" />
    <action android:id="@+id/action_global_nav_city_picker" app:destination="@id/nav_city_picker" />
    <action android:id="@+id/action_global_nav_settings" app:destination="@id/nav_settings" />
    <action android:id="@+id/action_global_nav_finder" app:destination="@id/nav_finder"/>
    <action android:id="@+id/action_global_nav_sky" app:destination="@id/nav_sky"/>
    <action android:id="@+id/action_global_nav_stars" app:destination="@id/nav_stars"/>
    <action android:id="@+id/action_global_nav_moment_time" app:destination="@id/nav_moment_time"/>
    <action android:id="@+id/action_global_nav_moment_location" app:destination="@id/nav_moment_location"/>

</navigation>