<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/city_berlin"
            android:layout_marginTop="@dimen/image_margin"
            android:contentDescription="@string/label_empty"
            />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/default_copyright"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_copyright"
            />

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/copyright"
            android:layout_margin="@dimen/text_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textAlignment="center"
                android:text="@string/hint_city" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_name_colon" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_city"
                android:inputType="text"
                android:layout_marginHorizontal="@dimen/button_margin"
                android:autofillHints="@string/label_empty"
                android:hint="@string/label_empty" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_latitude_colon" />

            <EditText
                android:id="@+id/editLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_latitude"
                android:inputType="numberDecimal"
                android:layout_marginHorizontal="@dimen/button_margin"
                android:autofillHints="@string/label_empty"
                android:hint="@string/label_empty" />

            <TextView
                android:id="@+id/labelLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_longitude_colon" />

            <EditText
                android:id="@+id/editLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_longitude"
                android:inputType="numberDecimal"
                android:layout_marginHorizontal="@dimen/button_margin"
                android:autofillHints="@string/label_empty"
                android:hint="@string/label_empty" />

            <TextView
                android:id="@+id/labelAltitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_altitude_colon" />

            <EditText
                android:id="@+id/editAltitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_altitude"
                android:inputType="numberDecimal"
                android:layout_marginHorizontal="@dimen/button_margin"
                android:autofillHints="@string/label_empty"
                android:hint="@string/label_empty" />

            <CheckBox
                android:id="@+id/checkBoxAutomatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/label_update_location_automatically" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_space"
                app:layout_constraintTop_toBottomOf="@id/details" />

        </LinearLayout>

        <ImageView
            android:id="@+id/buttonEarthView"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:src="@drawable/earth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details"
            android:layout_margin="@dimen/text_margin"
            android:contentDescription="@string/label_empty"
            />

        <ImageView
            android:id="@+id/buttonFinderView"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:src="@drawable/finder"
            app:layout_constraintStart_toEndOf="@id/buttonEarthView"
            app:layout_constraintTop_toBottomOf="@id/details"
            android:layout_margin="@dimen/text_margin"
            android:contentDescription="@string/label_empty"
            />

        <ImageView
            android:id="@+id/buttonReset"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:src="@drawable/close"
            app:layout_constraintStart_toEndOf="@id/buttonFinderView"
            app:layout_constraintTop_toBottomOf="@id/details"
            android:layout_margin="@dimen/text_margin"
            android:contentDescription="@string/label_empty"
            />

        <ImageView
            android:id="@+id/buttonSave"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:src="@drawable/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details"
            android:layout_margin="@dimen/text_margin"
            android:contentDescription="@string/label_empty"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
